Fixed more products visible good

--- a/my-menu-project/src/components/KitchenMain/KitchenMain.module.css
+++ b/my-menu-project/src/components/KitchenMain/KitchenMain.module.css
@@ -57,14 +57,29 @@
 /* --------------------------------------------------------- */
 
 .products {
-    margin-top: 0.5em;
+    padding: 1.2em;
+    margin-block: 0.3em;
     display: flex;
-    gap: 1em;
-    margin-left: 22%;   
+    gap: 2em;
+    width: 70%; 
+    margin-left: 22em; 
+    max-height: 70vh; 
+    overflow-y: auto;  
+    padding-right: -70px; 
+    flex-wrap: wrap;
+    align-content: flex-start;
+}
+
+.products::-webkit-scrollbar {
+    width: 6px;
+}
+.products::-webkit-scrollbar-thumb {
+    background-color: #f68606; 
+    border-radius: 10px;
 }
 
 .product {
-    max-width: 350px;
+    max-width: 300px;
     max-height: 300px;
     background-color: rgb(51, 7, 7);
     border-radius: 1em;
@@ -74,9 +89,9 @@
 }
 
 .product:hover {
-    transform: translateY(-10px) scale(1.02);
+    transform: scale(1.02);
     border-color: rgba(48, 48, 48, 0.2);
-    box-shadow: 0 5px 20px #fff;
+    box-shadow: 0 0 20px #fff;
 }
 
 .picture {
